--- a/style/style.css
+++ b/style/style.css
@@ -25,3 +25,14 @@
 .list-group-item:hover {
   background-color: #eee;
 }
+
+.search-button {
+  background-color: #100950; /* Blue */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
